aws/dsba/mvf/route-auditor.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mvf-auditor
spec:
  port:
    targetPort: 7003
  tls:
    termination: edge
  to:
    kind: Service
    name: mvf
