aws/dsba/mvf/route-essif.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mvf-essif
spec:
  port:
    targetPort: 7004
  tls:
    termination: edge
  to:
    kind: Service
    name: mvf
