aws/dsba/mvf/route-mvf.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mvf
spec:
  port:
    targetPort: 7010
  tls:
    termination: edge
  to:
    kind: Service
    name: mvf
