aws/dsba/mvf/route-signatory.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mvf-signatory
spec:
  port:
    targetPort: 7001
  tls:
    termination: edge
  to:
    kind: Service
    name: mvf
